# tap-rest-api-msdk

./: .gitignore  .gitlab-ci.yml  README.md  config.sample.json  config_sample_entur.json  meltano.yml  mypy.ini  pyproject.toml  tap-rest-api-msdk.sh  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  releases.yml
.secrets/: .gitignore
tap_rest_api_msdk/: auth.py  client.py  pagination.py  streams.py  tap.py  utils.py
tap_rest_api_msdk/tests/: __init__.py  test_core.py  test_streams.py  test_tap.py  test_utils.py
tests/: schema.json  test_core.py  test_streams.py  test_tap.py  test_utils.py
