[tool.poetry]
name = "tap-rest-api-msdk"
version = "1.3.8"
description = "`tap-rest-api-msdk` is a Singer tap for REST APIs, built with the Meltano SDK for Singer Taps."
authors = ["Josh Lloyd", "Fred Reimer"]
keywords = [
    "ELT",
    "rest-api-msdk",
    "Meltano",
    "Singer",
    "REST",
    "API",
    "tap"
]
license = "Apache 2.0"
homepage = "https://github.com/Widen/tap-rest-api-msdk"
repository = "https://github.com/Widen/tap-rest-api-msdk"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.33.0"
genson = "^1.2.2"
atomicwrites = "^1.4.0"
requests-aws4auth = "^1.2.3"
boto3 = "^1.26.156"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^23.3.0"
pydocstyle = "^6.1.1"
mypy = "^1.3.0"
types-requests = "^2.25.8"
requests-mock = "^1.9.3"
isort = "^5.11.5"
types-python-dateutil = "^2.8.19.14"

[tool.black]
exclude = ".*simpleeval.*"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "singer_sdk"
known_first_party = ["tests", "samples"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-rest-api-msdk = 'tap_rest_api_msdk.tap:TapRestApiMsdk.cli'
